; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_hash.c_Curl_hash_destroy.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_hash.c_Curl_hash_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_hash = type { i32, i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_hash_destroy(%struct.curl_hash* %0) #0 {
  %2 = alloca %struct.curl_hash*, align 8
  %3 = alloca i32, align 4
  store %struct.curl_hash* %0, %struct.curl_hash** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %20, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.curl_hash*, %struct.curl_hash** %2, align 8
  %7 = getelementptr inbounds %struct.curl_hash, %struct.curl_hash* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %23

10:                                               ; preds = %4
  %11 = load %struct.curl_hash*, %struct.curl_hash** %2, align 8
  %12 = getelementptr inbounds %struct.curl_hash, %struct.curl_hash* %11, i32 0, i32 2
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load %struct.curl_hash*, %struct.curl_hash** %2, align 8
  %18 = bitcast %struct.curl_hash* %17 to i8*
  %19 = call i32 @Curl_llist_destroy(i32* %16, i8* %18)
  br label %20

20:                                               ; preds = %10
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %4

23:                                               ; preds = %4
  %24 = load %struct.curl_hash*, %struct.curl_hash** %2, align 8
  %25 = getelementptr inbounds %struct.curl_hash, %struct.curl_hash* %24, i32 0, i32 2
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @Curl_safefree(i32* %26)
  %28 = load %struct.curl_hash*, %struct.curl_hash** %2, align 8
  %29 = getelementptr inbounds %struct.curl_hash, %struct.curl_hash* %28, i32 0, i32 1
  store i64 0, i64* %29, align 8
  %30 = load %struct.curl_hash*, %struct.curl_hash** %2, align 8
  %31 = getelementptr inbounds %struct.curl_hash, %struct.curl_hash* %30, i32 0, i32 0
  store i32 0, i32* %31, align 8
  ret void
}

declare dso_local i32 @Curl_llist_destroy(i32*, i8*) #1

declare dso_local i32 @Curl_safefree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
